--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@foobar404/wave": "^1.2.7",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
@@ -12,12 +13,15 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "childprocess": "^2.0.2",
+    "express": "^4.17.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
     "spawn-npm": "^1.4.7",
     "styled-components": "^5.3.0",
+    "wave-visualizer": "^1.0.5",
+    "wavesurfer.js": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
